[ci skip] FIX some changes to be a bit more explicit (#1) a914e0ab331719f7b23e33d72b18171eb1c68278

--- a/_sources/content/notebooks/direct_vs_recursive_forecasting.ipynb
+++ b/_sources/content/notebooks/direct_vs_recursive_forecasting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "63d3e1fa",
+   "id": "e511901a",
    "metadata": {},
    "source": [
     "# Direct vs Recursive Forecasting\n",
@@ -29,9 +29,9 @@
     "segments:\n",
     "\n",
     "- Segment type \"a\" has a prefix centered around 0 with low variance and a\n",
-    "  suffix centered around 1.\n",
+    "  suffix centered around 1 with low variance.\n",
     "- Segment type \"b\" has a prefix centered around 0 with high variance and a\n",
-    "  suffix centered around -1.\n",
+    "  suffix centered around -1 with low variance.\n",
     "\n",
     "Segment of type \"a\" and \"b\" are independently sampled, meaning that is not\n",
     "possible to forecast beyond the length of the segments. However, it should be\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "266ac275",
+   "id": "a2025fbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f3de35b",
+   "id": "5796d05b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81d0eb4d",
+   "id": "1481f8ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "183dbb5c",
+   "id": "21e3fb35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76b988c0",
+   "id": "4cce9df2",
    "metadata": {},
    "source": [
     "\n",
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39ff1187",
+   "id": "7d8fabfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe1f09b3",
+   "id": "fb98dcb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d4c7c1e",
+   "id": "9b783d5e",
    "metadata": {},
    "source": [
     "\n",
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "324456f5",
+   "id": "ff62b93e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c65b10e",
+   "id": "9e33b35b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a36f0b95",
+   "id": "29fd1288",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8eab9d6e",
+   "id": "53bdf53d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2e047e8",
+   "id": "4a50791d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36bb34b3",
+   "id": "1175bacf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b858822",
+   "id": "d9a8f8d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09974702",
+   "id": "1b3a8b40",
    "metadata": {},
    "outputs": [],
    "source": [
