--- a/_sources/content/notebooks/multiple_horizons_prediction.ipynb
+++ b/_sources/content/notebooks/multiple_horizons_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eaae1083",
+   "id": "84c95ecd",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e36d3f9",
+   "id": "d89b2761",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef529859",
+   "id": "e1677213",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79d568d3",
+   "id": "819c6674",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -72,13 +72,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca68ce6b",
+   "id": "891c934c",
    "metadata": {},
    "source": [
     "\n",
     "## Predicting multiple horizons with a grid of single output models\n",
     "\n",
-    "Usually, it is really common to predict values for multiple horizons at once. The most\n",
+    "It is really common to predict values for multiple horizons at once. The most\n",
     "naive approach is to train as many models as there are horizons. To achieve this,\n",
     "scikit-learn provides a meta-estimator called `MultiOutputRegressor` that can be used\n",
     "to train a single model that predicts multiple horizons at once.\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45c95a1c",
+   "id": "40d30a51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68099d0d",
+   "id": "b14e3f8a",
    "metadata": {},
    "source": [
     "\n",
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eaf6721",
+   "id": "b3725477",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "819bca57",
+   "id": "048ea4c6",
    "metadata": {},
    "source": [
     "\n",
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bac54420",
+   "id": "32b0fc98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2badaed",
+   "id": "ec94c2c6",
    "metadata": {},
    "source": [
     "\n",
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f7c419f",
+   "id": "1c70ca80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d5c1c9a",
+   "id": "e169554f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c60343be",
+   "id": "393a7fb5",
    "metadata": {},
    "source": [
     "\n",
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7ef68b3",
+   "id": "bef28f37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38c46a09",
+   "id": "b880acac",
    "metadata": {},
    "source": [
     "\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c69712f4",
+   "id": "2623eaff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17918949",
+   "id": "42d0ce9b",
    "metadata": {},
    "source": [
     "\n",
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13a57665",
+   "id": "5295d99e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b1c5345",
+   "id": "457f6059",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81e25640",
+   "id": "2c61b2e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cec37c9",
+   "id": "7b93a75a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "272d28b7",
+   "id": "1da74493",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0693f1f",
+   "id": "aabaae56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d94750f",
+   "id": "55b33805",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b36ed3f",
+   "id": "900b85d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d9b89cc",
+   "id": "47cf7400",
    "metadata": {},
    "source": [
     "\n",
