--- a/_sources/content/notebooks/single_horizon_prediction.ipynb
+++ b/_sources/content/notebooks/single_horizon_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "93f316b6",
+   "id": "8a618c70",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c586a93",
+   "id": "11d55cec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd3689a1",
+   "id": "ac33507c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abe69072",
+   "id": "6db5842c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "019f6dd9",
+   "id": "8b7365cd",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eda15b9",
+   "id": "22626d9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1846a45",
+   "id": "c8226030",
    "metadata": {},
    "source": [
     "\n",
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38e3bdfd",
+   "id": "0e943905",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e6af4f3",
+   "id": "c8d8c03c",
    "metadata": {},
    "source": [
     "\n",
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2967a9c1",
+   "id": "1f351540",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c08c4c73",
+   "id": "ec201e4c",
    "metadata": {},
    "source": [
     "\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5194a806",
+   "id": "b50f84b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "829927ef",
+   "id": "40c55c17",
    "metadata": {},
    "source": [
     "\n",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19fbaa2f",
+   "id": "d363d4ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41720ea4",
+   "id": "956b8604",
    "metadata": {},
    "source": [
     "\n",
@@ -263,7 +263,7 @@
     "\n",
     "In the example below, we define that the training data should be at most 2 years\n",
     "worth of data and the test data should be 24 weeks long. We also define a gap of\n",
-    "1 week between the training.\n",
+    "1 week between the training and the testing sets.\n",
     "\n",
     "Let's check those statistics by iterating over the different folds provided by the\n",
     "splitter."
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20a281b2",
+   "id": "96e98abc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "883004fd",
+   "id": "17891c78",
    "metadata": {},
    "source": [
     "\n",
@@ -314,7 +314,7 @@
     "target variable such as electricity load forecasting.\n",
     "\n",
     "We can also look at the R2 score and the Poisson and Gamma deviance which are\n",
-    "all strictly proper scoring rules for estimation of E[y|X]: in the large\n",
+    "all strictly proper scoring rules for estimation of $E[y|X]$: in the large\n",
     "sample limit, minimizers of those metrics all identify the conditional\n",
     "expectation of the target variable given the features for strictly positive\n",
     "target variables. All those metrics follow the higher is better convention,\n",
@@ -322,22 +322,23 @@
     "predicts the mean of the target variable for all observations, irrespective\n",
     "of the features.\n",
     "\n",
-    "No that in general, a deviance score of 1.0 is not reachable since it\n",
+    "Know that in general, a deviance score of 1.0 is not reachable since it\n",
     "corresponds to a model that always predicts the target value exactly\n",
     "for all observations. In practice, because there is always a fraction of the\n",
     "variability in the target variable that is not explained by the information\n",
-    "available to construct the features."
+    "available to construct the features, this perfect prediction is impossible."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "596913a9",
+   "id": "27fdc3ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import make_scorer, mean_absolute_percentage_error, get_scorer\n",
-    "from sklearn.metrics import d2_tweedie_score\n",
+    "from sklearn.metrics import (\n",
+    "    make_scorer, mean_absolute_percentage_error, get_scorer, d2_tweedie_score\n",
+    ")\n",
     "\n",
     "\n",
     "hgbr_cv_results = hgbr_predictions.skb.cross_validate(\n",
@@ -358,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dc1e58e",
+   "id": "42e2edb0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -387,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fb1c0b9",
+   "id": "009537ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf8d6c93",
+   "id": "6a4d4b67",
    "metadata": {},
    "source": [
     "\n",
@@ -411,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d5f5789",
+   "id": "eba0523e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bce0ebf4",
+   "id": "dab67837",
    "metadata": {},
    "source": [
     "\n",
@@ -442,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee36edac",
+   "id": "25ab68ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3791fa1b",
+   "id": "2a0ddf52",
    "metadata": {},
    "source": [
     "\n",
@@ -467,7 +468,7 @@
     "A true model is navigating between the diagonal and the oracle model. The area between\n",
     "the diagonal and the Lorenz curve of a model is called the Gini index.\n",
     "\n",
-    "For our model, we observe that each oracle model is not far from the diagonal. It\n",
+    "For our usecase, we observe that each oracle model is not far from the diagonal. It\n",
     "means that the observed values do not contain a couple of large values with high\n",
     "variability. Therefore, it informs us that the complexity of our problem at hand is\n",
     "not too high. Looking at the Lorenz curve of each model, we observe that it is quite\n",
@@ -481,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cb83c40",
+   "id": "70a7ccaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3101613a",
+   "id": "b964c3b0",
    "metadata": {},
    "source": [
     "\n",
@@ -510,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd2e26b4",
+   "id": "86d9a439",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "162eef7d",
+   "id": "2a12ecc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b769c759",
+   "id": "89898032",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78996102",
+   "id": "e9ca7936",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b979b584",
+   "id": "9406a6a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a526223c",
+   "id": "c6b5fc06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b12591df",
+   "id": "6732bd1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64930676",
+   "id": "de789ffc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf8c4e22",
+   "id": "540cc17a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -661,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19b3ad0f",
+   "id": "11daae7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "499e0f44",
+   "id": "b3ee9133",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fe1dbec",
+   "id": "46b2300b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa19fc4e",
+   "id": "c0857472",
    "metadata": {},
    "source": [
     "\n",
@@ -740,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2a02849",
+   "id": "3cba4262",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f44f0e77",
+   "id": "33e8b530",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b886c76",
+   "id": "cf380980",
    "metadata": {},
    "source": [
     "Do a sanity check by plotting the observed values and predictions for the first fold\n",
@@ -794,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "154e21e9",
+   "id": "349a5e2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59fcc92f",
+   "id": "6c8b1eb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58ca21cf",
+   "id": "a3c82dff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83cf26b2",
+   "id": "dbb9b94f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f17e3962",
+   "id": "9f56b5f3",
    "metadata": {},
    "source": [
     "\n",
@@ -862,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf18cf06",
+   "id": "1dd822d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e48d0bb2",
+   "id": "1b225da4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4559134",
+   "id": "8b43fbbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c123a6d0",
+   "id": "eddc4ff5",
    "metadata": {},
    "source": [
     "\n",
@@ -916,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ffc6ecd",
+   "id": "ad94a33e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb308251",
+   "id": "42bedfd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a45f8fa5",
+   "id": "00bdd22b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +955,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b1865ee",
+   "id": "9732de06",
    "metadata": {},
    "source": [
     "\n",
@@ -972,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9818b312",
+   "id": "56d66414",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b38d7204",
+   "id": "4326aeaa",
    "metadata": {},
    "outputs": [],
    "source": [
