--- a/jupyterlite/files/notebooks/direct_vs_recursive_forecasting.ipynb
+++ b/jupyterlite/files/notebooks/direct_vs_recursive_forecasting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d1153c9d",
+   "id": "bc6ecc89",
    "metadata": {},
    "source": [
     "# Direct vs Recursive Forecasting\n",
@@ -29,9 +29,9 @@
     "segments:\n",
     "\n",
     "- Segment type \"a\" has a prefix centered around 0 with low variance and a\n",
-    "  suffix centered around 1.\n",
+    "  suffix centered around 1 with low variance.\n",
     "- Segment type \"b\" has a prefix centered around 0 with high variance and a\n",
-    "  suffix centered around -1.\n",
+    "  suffix centered around -1 with low variance.\n",
     "\n",
     "Segment of type \"a\" and \"b\" are independently sampled, meaning that is not\n",
     "possible to forecast beyond the length of the segments. However, it should be\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "280bb5b0",
+   "id": "94a763d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04fe9184",
+   "id": "e495a957",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0053eaac",
+   "id": "3b5ffc11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a12b91db",
+   "id": "7c150f96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b990dac",
+   "id": "661a7e9e",
    "metadata": {},
    "source": [
     "\n",
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d43c93b9",
+   "id": "316b45fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2de29857",
+   "id": "02bbfd1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7338b60b",
+   "id": "532573db",
    "metadata": {},
    "source": [
     "\n",
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a97ff52f",
+   "id": "be1a2cde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c09b35c",
+   "id": "e87fe91f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "219f1a85",
+   "id": "5ea91296",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c44ef02a",
+   "id": "196e7755",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80e105dc",
+   "id": "0f3b6e17",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06fbc85b",
+   "id": "2ef18c17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81f83112",
+   "id": "25c6af91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e887c331",
+   "id": "002a01c3",
    "metadata": {},
    "outputs": [],
    "source": [
