--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6cd42094",
+   "id": "79406348",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cebd4ad",
+   "id": "a1f1eeae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45ec426b",
+   "id": "86680a47",
    "metadata": {},
    "source": [
     "\n",
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de0ee07b",
+   "id": "0412aee0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1e95afd",
+   "id": "bfdf01ea",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -98,7 +98,7 @@
     "We wrap the resulting polars dataframe in a `skrub` expression to benefit\n",
     "from the built-in `skrub.TableReport` display in the notebook. Using the\n",
     "`skrub` expression system will also be useful for other reasons: all\n",
-    "operations in this notebook chain operations chained together in a directed\n",
+    "operations in this notebook are chained together in a directed\n",
     "acyclic graph that is automatically tracked by `skrub`. This allows us to\n",
     "extract the resulting pipeline and apply it to new data later on, exactly\n",
     "like a trained scikit-learn pipeline. The main difference is that we do so\n",
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72aca697",
+   "id": "4c50bd10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60851577",
+   "id": "49435529",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3afaa8fc",
+   "id": "fd165e91",
    "metadata": {},
    "source": [
     "\n",
@@ -164,15 +164,13 @@
     "Let's now load the data records for the time range defined above.\n",
     "\n",
     "To avoid network issues when running this notebook, the necessary data files\n",
-    "have already been downloaded and saved in the `datasets` folder. See the\n",
-    "README.md file for instructions to download the data manually if you want to\n",
-    "re-run this notebook with more recent data."
+    "have already been downloaded and saved in the `datasets` folder. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e8b3ae4",
+   "id": "e09c6013",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8820d36c",
+   "id": "9da1dbfe",
    "metadata": {},
    "source": [
     "\n",
@@ -196,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bce6c9b",
+   "id": "e459a073",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -241,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a2c4ace",
+   "id": "7750279a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -265,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a498f71e",
+   "id": "92072a0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fa9ad67",
+   "id": "eac88844",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -309,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db1f7dee",
+   "id": "e4a6ec7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f35a9d5",
+   "id": "bf2c7c9a",
    "metadata": {},
    "source": [
     "\n",
@@ -359,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da1e433c",
+   "id": "88f55221",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5ff73c0",
+   "id": "b51b8358",
    "metadata": {},
    "source": [
     "\n",
@@ -380,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3951fe3",
+   "id": "87e35ed7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9ab9521",
+   "id": "ed4c3341",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81bd1776",
+   "id": "434efc04",
    "metadata": {},
    "source": [
     "\n",
@@ -423,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56de8f3f",
+   "id": "b03310d6",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -441,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f372f7b8",
+   "id": "0d935db0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "861a6281",
+   "id": "88483c2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dcaddeb",
+   "id": "cd5798b4",
    "metadata": {},
    "source": [
     "\n",
@@ -505,9 +503,9 @@
     "When working with historical data, we often have access to all the past\n",
     "measurements in the dataset. However, when we want to use the lagged features\n",
     "in a forecasting model, we need to be careful about the length of the\n",
-    "**system lag**: the time between a timestamped measurement is made in the\n",
-    "real world and the time the record is made available to the downstream\n",
-    "application (in our case, a deployed predictive pipeline).\n",
+    "**system lag**. The system lag is the timelaps between the moment a timestamped \n",
+    "measurement is made in the real world and the moment where the record is made \n",
+    "available to the downstream application (in our case, a deployed predictive pipeline).\n",
     "\n",
     "System lag is rarely explicitly represented in the data sources even if such\n",
     "delay can be as large as several hours or even days and can sometimes be\n",
@@ -532,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "565fae5a",
+   "id": "cff94d90",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -544,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deacf814",
+   "id": "8ca9b91a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,18 +553,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7a5028b",
+   "id": "e55d9751",
    "metadata": {},
    "source": [
     "\n",
-    "Let's extract the dates where the inter-quartile range of the load is\n",
-    "greater than 15,000 MW."
+    "Let's extract the dates where the inter-quartile range of the load on 7 days is\n",
+    "greater than 15,000 MW, to investigate the outliers hightlighted by the TableReport."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e56bcd0",
+   "id": "43292d0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4b75243",
+   "id": "a5430bc0",
    "metadata": {},
    "source": [
     "\n",
@@ -589,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d74e57b4",
+   "id": "d683f682",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81dd5a88",
+   "id": "c43d1a01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfb93aee",
+   "id": "8437bfb2",
    "metadata": {},
    "source": [
     "\n",
@@ -658,7 +656,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7c460ff",
+   "id": "14fa292f",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -670,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11faff55",
+   "id": "1304285c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2af76c7",
+   "id": "67221a73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02e19ae8",
+   "id": "f2228d94",
    "metadata": {},
    "source": [
     "\n",
@@ -772,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29fcb24d",
+   "id": "5f3d396b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08ef8c0f",
+   "id": "4ddd7c43",
    "metadata": {},
    "source": [
     "\n",
@@ -813,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96406a0e",
+   "id": "183fe626",
    "metadata": {},
    "outputs": [],
    "source": [
