--- a/jupyterlite/files/notebooks/multiple_horizons_prediction.ipynb
+++ b/jupyterlite/files/notebooks/multiple_horizons_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0d16e1db",
+   "id": "9a454f1d",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acd568a8",
+   "id": "bf77a5d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65b3d769",
+   "id": "e61d59dd",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24839ac9",
+   "id": "7c6794fb",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -72,13 +72,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cb874ad",
+   "id": "e891737f",
    "metadata": {},
    "source": [
     "\n",
     "## Predicting multiple horizons with a grid of single output models\n",
     "\n",
-    "Usually, it is really common to predict values for multiple horizons at once. The most\n",
+    "It is really common to predict values for multiple horizons at once. The most\n",
     "naive approach is to train as many models as there are horizons. To achieve this,\n",
     "scikit-learn provides a meta-estimator called `MultiOutputRegressor` that can be used\n",
     "to train a single model that predicts multiple horizons at once.\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcbf41be",
+   "id": "7e7982dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79341482",
+   "id": "1bf5d9d5",
    "metadata": {},
    "source": [
     "\n",
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "196827ed",
+   "id": "4612888d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dcf4156",
+   "id": "eb68eb9c",
    "metadata": {},
    "source": [
     "\n",
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b17966b",
+   "id": "2665cee5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "843da003",
+   "id": "481c36ca",
    "metadata": {},
    "source": [
     "\n",
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fb15d59",
+   "id": "013f1f93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a894bfec",
+   "id": "65d50cea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48b434d3",
+   "id": "83104034",
    "metadata": {},
    "source": [
     "\n",
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ec6cb59",
+   "id": "d1876192",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8663bae4",
+   "id": "70000299",
    "metadata": {},
    "source": [
     "\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62c22199",
+   "id": "f9cf8f2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "570e0b0d",
+   "id": "bdbfdb20",
    "metadata": {},
    "source": [
     "\n",
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc5f8eeb",
+   "id": "58b18f4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b840136",
+   "id": "d5f8d76c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a63024de",
+   "id": "b59dc957",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24ea6c01",
+   "id": "6007ad7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d5d9c65",
+   "id": "b106bd84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81795f24",
+   "id": "b08e5cca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de763974",
+   "id": "1b368e0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0ddaa42",
+   "id": "817246d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06c8edf7",
+   "id": "32226a1a",
    "metadata": {},
    "source": [
     "\n",
